gitops/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lamborghini-shop-dev
  labels:
    name: lamborghini-shop-dev
    environment: dev
    app: lamborghini-shop

# Made with Bob
